--- a/instagram/app/src/main/res/values/styles.xml
+++ b/instagram/app/src/main/res/values/styles.xml
@@ -6,13 +6,18 @@
         <item name="android:layout_marginEnd">36dp</item>
     </style>
 
-    <style name="InstaFormEditText" parent="FormContainer">
+    <style name="InstaFormEditTextInput" parent="FormContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
+    <style name="InstaFormEditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/edit_text_background</item>
         <item name="android:padding">16dp</item>
-        <item name="android:layout_marginBottom">24dp</item>
-
+        <item name="android:layout_marginBottom">4dp</item>
     </style>
 
     <style name="InstaFormButton" parent="FormContainer">
@@ -29,16 +34,14 @@
         <item name="android:background">@null</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_width">wrap_content</item>
-
-
     </style>
-
 
     <style name="InstaTextViewBase">
         <item name="android:textColor">@color/grayText</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-
-
     </style>
+
+
+
 </resources>
