--- a/instagram/app/src/main/res/drawable/edit_text_background_error.xml
+++ b/instagram/app/src/main/res/drawable/edit_text_background_error.xml
@@ -4,9 +4,8 @@
     <stroke
         android:width="1dp"
         android:color="@color/grayBorder" />
-    <solid android:color="@color/gray" />
+    <solid android:color="@android:color/transparent" />
     <corners android:radius="4dp" />
-
 
 
 </shape>
