--- a/instagram/app/src/main/res/values/colors.xml
+++ b/instagram/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="blueEnable">#3897F0</color>
 
     <color name="grayText">#999999</color>
+    <color name="red">#FF0000</color>
 
 </resources>
