--- a/instagram/app/src/main/res/values/styles.xml
+++ b/instagram/app/src/main/res/values/styles.xml
@@ -12,6 +12,24 @@
         <item name="android:layout_marginBottom">20dp</item>
     </style>
 
+    <style name="InstaTextViewBaseForm" parent="FormContainer">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_marginBottom">24dp</item>
+    </style>
+    <style name="InstaTextViewBaseDialog">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">12dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:textAlignment">textStart</item>
+    </style>
+
+
     <style name="InstaFormEditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
