--- a/instagram/app/src/main/res/layout/activity_login.xml
+++ b/instagram/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <LoginPresentation.LoadingButton
+            <Common.View.LoadingButton
                 android:id="@+id/login_button_enter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
