--- a/instagram/app/src/main/res/layout/fragment_register_email.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_email.xml
@@ -35,7 +35,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LoginPresentation.LoadingButton
+    <Common.View.LoadingButton
         android:id="@+id/register_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
