--- a/instagram/app/src/main/res/layout/fragment_register_name_password.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_name_password.xml
@@ -54,7 +54,7 @@
             android:textCursorDrawable="@null" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LoginPresentation.LoadingButton
+    <Common.View.LoadingButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:text="@string/continuee" />
