--- a/instagram/app/src/main/res/layout/fragment_register_welcome.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_welcome.xml
@@ -13,7 +13,7 @@
         style="@style/InstaTextViewBaseForm"
         android:layout_gravity="center"
         android:text="@string/welcome_to_instagram"/>
-    <LoginPresentation.LoadingButton
+    <Common.View.LoadingButton
         android:id="@+id/register_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
