--- a/instagram/app/src/main/res/layout/button_loading.xml
+++ b/instagram/app/src/main/res/layout/button_loading.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatButton
-        style="@style/InstaFormButton"/>
+    <androidx.appcompat.widget.AppCompatButton style="@style/InstaFormButton" />
 
     <ProgressBar
         android:layout_width="36dp"
@@ -13,8 +12,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
         android:visibility="gone"
-        tools:visibility="visible"/>
-
+        tools:visibility="visible" />
 
 
 </merge>
