--- a/instagram/app/src/main/res/layout/activity_main.xml
+++ b/instagram/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,53 @@
     android:background="@color/white"
     tools:context="Main.MainActivity">
 
-    <fragment
-        android:id="@+id/main_fragment"
-        android:name="Main.ProfilePresentation.ProfileFragment"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/main_bottom_nav"
-        tools:layout="@layout/fragment_main_profile" />
+        android:layout_above="@id/main_bottom_nav">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/main_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/colorPrimary"
+                app:layout_scrollFlags="scroll"
+                app:title=" "
+                app:titleTextColor="@color/colorAccent">
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:padding="8dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/instagram_logo_black"
+                    />
+
+            </androidx.appcompat.widget.Toolbar>
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context="Main.MainActivity">
+
+            <fragment
+                android:id="@+id/main_fragment"
+                android:name="Main.ProfilePresentation.ProfileFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:layout="@layout/fragment_main_profile" />
+        </LinearLayout>
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_bottom_nav"
