--- a/instagram/app/src/main/res/values/styles.xml
+++ b/instagram/app/src/main/res/values/styles.xml
@@ -29,6 +29,13 @@
         <item name="android:layout_marginBottom">24dp</item>
     </style>
 
+    <style name="InstaImageViewPost">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginEnd">16dp</item>
+
+    </style>
+
     <style name="InstaTextViewBaseDialog">
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:layout_width">match_parent</item>
