--- a/instagram/app/src/main/res/layout/fragment_main_gallery.xml
+++ b/instagram/app/src/main/res/layout/fragment_main_gallery.xml
@@ -11,35 +11,27 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/camera_image_grid"
+            android:id="@+id/main_gallery_top"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
             android:background="@color/red"
-            android:scaleType="center"
+            android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
-        <FrameLayout
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/camera_image_grid">
+            app:layout_constraintTop_toBottomOf="@id/main_gallery_top"
+            tools:listitem="@layout/item_profile_grid" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/camera_image_view_picture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_insta_profile_thin"
-                app:civ_border_color="@color/grayBorder"
-                app:civ_border_width="1dp"
-                app:civ_circle_background_color="@color/grayBorder" />
-        </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
