--- a/instagram/app/src/main/res/layout/activity_main.xml
+++ b/instagram/app/src/main/res/layout/activity_main.xml
@@ -24,14 +24,14 @@
                 app:layout_scrollFlags="scroll"
                 app:title=" "
                 app:titleTextColor="@color/colorAccent">
+
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="start"
                     android:layout_marginTop="8dp"
                     android:padding="8dp"
-                    android:layout_gravity="start"
-                    android:src="@drawable/instagram_logo_black"
-                    />
+                    android:src="@drawable/instagram_logo_black" />
 
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
@@ -48,7 +48,7 @@
                 android:name="Main.Camera.Presentation"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:layout="@layout/fragment_main_gallery"/>
+                tools:layout="@layout/fragment_main_gallery" />
         </LinearLayout>
 
 
