--- a/instagram/app/src/main/res/layout/activity_login.xml
+++ b/instagram/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="LoginPresentation.LoginActivity">
+    tools:context="Login.Presentation.LoginActivity">
 
     <ScrollView
         android:layout_width="match_parent"
