--- a/instagram/app/src/main/res/layout/activity_register.xml
+++ b/instagram/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,8 @@
     <ScrollView
         android:id="@+id/register_scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,13 +18,11 @@
             android:orientation="vertical">
 
 
-            <fragment
+            <FrameLayout
                 android:id="@+id/register_fragment"
-                android:name="RegisterPresentation.RegisterPhotoFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                tools:layout="@layout/fragment_register_photo" />
+                android:layout_marginTop="24dp" />
         </LinearLayout>
 
     </ScrollView>
