--- a/instagram/app/src/main/res/layout/fragment_register_email.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_email.xml
@@ -3,12 +3,10 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="RegisterPresentation.RegisterActivity"
-    tools:showIn="@layout/activity_register">
+    android:layout_gravity="bottom"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
