update 18_JUN 00:00 - check click button next fragment_register_email and butter knife bind in AbstractFragment

--- a/instagram/app/src/main/res/layout/fragment_register_welcome.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_welcome.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:text="@string/welcome_to_instagram" />
 
-    <Common.view.LoadingButton
+    <common.view.LoadingButton
         android:id="@+id/register_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
