--- a/instagram/app/src/main/res/layout/fragment_register_email.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_email.xml
@@ -33,8 +33,8 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Common.view.LoadingButton
-        android:id="@+id/register_button_next"
+    <common.view.LoadingButton
+        android:id="@+id/register_email_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:text="@string/next" />
