--- a/instagram/app/src/main/res/layout/fragment_register_name_password.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_name_password.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="RegisterPresentation.RegisterActivity"
-    tools:showIn="@layout/activity_register">
+    android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/register_edit_text_name_input"
@@ -54,7 +51,7 @@
             android:textCursorDrawable="@null" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Common.view.LoadingButton
+    <common.view.LoadingButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:text="@string/continuee" />
