--- a/instagram/app/src/main/res/layout/fragment_register_name_password.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_name_password.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context="RegisterPresentation.RegisterActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/register_edit_text_name_input"
@@ -52,6 +54,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <common.view.LoadingButton
+        android:id="@+id/register_button_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:text="@string/continuee" />
@@ -64,6 +67,7 @@
         android:background="@color/colorPrimaryDark" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/register_text_view_login"
         style="@style/InstaTextViewBase"
         android:layout_width="match_parent"
         android:gravity="center"
