--- a/instagram/app/src/main/res/layout/fragment_register_name_password.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_name_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context="RegisterPresentation.RegisterActivity">
+    tools:context="Register.presentation.RegisterActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/register_edit_text_name_input"
