--- a/instagram/app/src/main/res/layout/fragment_register_welcome.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_welcome.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="RegisterPresentation.RegisterActivity"
-    tools:showIn="@layout/activity_register">
+    tools:context="Register.presentation.RegisterActivity">
 
     <TextView
+        android:id="@+id/text_view_welcome"
         style="@style/InstaTextViewBaseForm"
         android:layout_gravity="center"
         android:text="@string/welcome_to_instagram" />
