--- a/instagram/app/src/main/res/layout/fragment_register_photo.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_photo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="RegisterPresentation.RegisterActivity"
+    tools:context="Register.presentation.RegisterActivity"
     tools:showIn="@layout/activity_register">
 
     <androidx.appcompat.widget.AppCompatImageView
