--- a/instagram/app/src/main/res/layout/fragment_register_name_password.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_name_password.xml
@@ -53,7 +53,7 @@
             android:textCursorDrawable="@null" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <common.view.LoadingButton
+    <common.component.LoadingButton
         android:id="@+id/register_button_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
