--- a/instagram/app/src/main/res/layout/activity_register.xml
+++ b/instagram/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/register_root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -23,7 +25,29 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp" />
         </LinearLayout>
-
     </ScrollView>
 
-</LinearLayout>
+    <com.canhub.cropper.CropImageView
+        android:id="@+id/register_crop_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cropScaleType="centerCrop" />
+
+    <Button
+        android:id="@+id/register_button_crop"
+        style="@style/InstaFormButton.Link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:text="@string/save"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        tools:textColor="@color/black"
+        tools:visibility="visible" />
+
+
+</FrameLayout>
