--- a/instagram/app/src/main/res/layout/fragment_register_email.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_email.xml
@@ -33,7 +33,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <common.view.LoadingButton
+    <common.component.LoadingButton
         android:id="@+id/register_email_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
