--- a/instagram/app/src/main/res/layout/fragment_register_photo.xml
+++ b/instagram/app/src/main/res/layout/fragment_register_photo.xml
@@ -7,11 +7,14 @@
     android:orientation="vertical"
     tools:context="Register.presentation.RegisterActivity">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/register_image_icon"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:layout_gravity="center"
         android:layout_marginBottom="24dp"
+        app:civ_border_width="0dp"
+        app:civ_border_color="@color/colorAccent"
         android:src="@drawable/photo_icon" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -25,7 +28,7 @@
         android:layout_gravity="center"
         android:text="@string/photo_register_subtitle" />
 
-    <common.view.LoadingButton
+    <common.component.LoadingButton
         android:id="@+id/register_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
