--- a/instagram/app/src/main/res/layout/activity_register.xml
+++ b/instagram/app/src/main/res/layout/activity_register.xml
@@ -41,12 +41,16 @@
         android:layout_gravity="end"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        android:backgroundTint="@android:color/transparent"
         android:text="@string/save"
+        android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         android:visibility="invisible"
+
         tools:textColor="@color/black"
+        tools:backgroundTint="@color/white"
         tools:visibility="visible" />
 
 
