--- a/instagram/app/src/main/res/layout/item_post_list.xml
+++ b/instagram/app/src/main/res/layout/item_post_list.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/home_image_user"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_insta_profile_thin"
@@ -26,12 +27,15 @@
             app:civ_circle_background_color="@color/colorPrimary" />
 
         <TextView
+            android:id="@+id/home_username"
             style="@style/InstaTextView"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:text="@string/username" />
+            android:text="@string/username"
+            android:textAlignment="inherit" />
 
         <ImageView
             android:layout_width="wrap_content"
