--- a/instagram/app/src/main/res/values/styles.xml
+++ b/instagram/app/src/main/res/values/styles.xml
@@ -88,5 +88,12 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
+    <style name="AppToolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+    </style>
+
 
 </resources>
