--- a/instagram/app/src/main/res/menu/menu_search.xml
+++ b/instagram/app/src/main/res/menu/menu_search.xml
@@ -5,6 +5,7 @@
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/search"
-        app:actionViewClass="android.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
+
 </menu>
