--- a/instagram/app/src/main/res/layout/activity_add_caption.xml
+++ b/instagram/app/src/main/res/layout/activity_add_caption.xml
@@ -44,4 +44,12 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/add_caption_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
