--- a/instagram/app/src/main/res/layout/item_post_list.xml
+++ b/instagram/app/src/main/res/layout/item_post_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/home_container_user_profile"
@@ -48,7 +48,6 @@
         android:id="@+id/post_image_grid"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@color/red"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
